# socketpair

./: CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: lib.rs  posish.rs  rsix.rs  rustix.rs  unix.rs  unix_async_std.rs  unix_tokio.rs  windows.rs  windows_async_std.rs  windows_tokio.rs  winx.rs
tests/: seqpacket.rs  test.rs
