[package]
name = "socketpair"
version = "0.12.1-alpha.0"
description = "Cross-platform socketpair functionality"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/socketpair"
exclude = ["/.github"]

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
async-std = { version = "1.10.0", optional = true }
tokio = { version = "1.8.1", optional = true }
io-extras = "0.12.0"
io-lifetimes = { version = "0.4.0", default-features = false }

[target.'cfg(not(windows))'.dependencies]
rustix = "0.27.0"

[target.'cfg(windows)'.dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["handleapi", "namedpipeapi", "std", "winerror"] }

[dev-dependencies]
anyhow = "1.0.38"

[features]
default = []
use_async_std = ["async-std", "io-extras/async-std", "io-lifetimes/async-std"]
use_tokio = ["tokio", "io-extras/tokio", "io-lifetimes/tokio"]

[badges]
maintenance = { status = "actively-developed" }
