[package]
name = "socketpair"
version = "0.19.7"
description = "Cross-platform socketpair functionality"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/socketpair"
exclude = ["/.github"]

[dependencies]
async-std = { version = "1.13.0", optional = true, features = ["io_safety"] }
tokio = { version = "1.8.1", optional = true }
io-extras = "0.18.0"
io-lifetimes = { version = "2.0.0", default-features = false }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0.0", features = ["net"] }

[target.'cfg(windows)'.dependencies]
uuid = { version = "1.0.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
]

[dev-dependencies]
anyhow = "1.0.38"

[features]
default = []
use_async_std = ["async-std", "io-extras/async-std"]
use_tokio = ["tokio", "io-extras/tokio"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(bench)',
    'cfg(read_initializer)',
    'cfg(can_vector)',
    'cfg(clamp)',
    'cfg(extend_one)',
    'cfg(pattern)',
    'cfg(seek_stream_len)',
    'cfg(shrink_to)',
    'cfg(toowned_clone_into)',
    'cfg(try_reserve)',
    'cfg(unix_socket_peek)',
    'cfg(windows_by_handle)',
    'cfg(write_all_vectored)',
    'cfg(windows_file_type_ext)',
]
